<resources>
    <string name="app_name">MaterialDesignTips</string>
    <string name="habib_image">habib image</string>
    <string name="habibur_rahman">Habibur Rahman</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_mail">Sent mail</string>
    <string name="drafts">Draft</string>
    <string name="subheader">Subheader</string>
    <string name="all_mail">All mail</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
</resources>
